# data

./: README.md  pyproject.toml
.github/workflows/: data-validation.yml  format.yml  lint.yml
tests/: __init__.py  schema_repository.yaml  test_forbidden_file_formats.py  test_repo_folder_structure.py  test_repository_yaml.py
zlflodata/: __init__.py  _version.py  get_paths.py
zlflodata/data/: repository.yaml
zlflodata/data/public/: README.md
zlflodata/data/public/example_dataset/v1.0.0/: example_gdf.geojson
