[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "zlflodata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0.1"]
dynamic = ["version"]
authors = [
    { name = "Ronnie Hollebrandse", email = "cj.hollebrandse@zeeland.nl" },
    { name = "Onno Ebbens", email = "o.ebbens@artesia-water.nl" },
    { name = "Davíd Brakenhoff", email = "d.brakenhoff@artesia-water.nl" },
    { name = "Martin Vonk", email = "m.vonk@artesia-water.nl" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
description = "Data for the ZLFLO groundwater modeling framework."
keywords = ["ZLFLO"]
license = { file = "LICENSE.txt" }

[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest", "yamale", "yamllint"]

[tool.setuptools.dynamic]
version = { attr = "zlflodata._version.__version__" }

[tool.uv]
default-groups = ["lint", "test"]

[tool.ruff]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
show-fixes = true
fix = true
